--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
             background: #333;
             color: white;
         }
+        .settings-menu {
+            position: absolute;
+            right: 10px;
+            top: 50px;
+            background: white;
+            border: 1px solid #ccc;
+            padding: 10px;
+            display: none;
+        }
         .dark-mode {
             background: #222;
             color: white;
-        }
-        .toggle-container {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
         }
         .login-container {
             width: 300px;
@@ -83,14 +87,13 @@
 <body>
 
     <div class="navbar">
-        <div class="toggle-container">
-            <span>Dark Mode</span>
-            <label class="toggle-switch">
-                <input type="checkbox" id="themeToggle">
-                <span class="slider"></span>
-            </label>
-        </div>
-        <button id="logoutButton" style="display: none;">Logout</button>
+        <span>CRM Dashboard</span>
+        <button onclick="toggleSettings()">⚙ Settings</button>
+    </div>
+
+    <div class="settings-menu" id="settingsMenu">
+        <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
+        <button onclick="logout()">Logout</button>
     </div>
 
     <div id="loginSection">
@@ -128,19 +131,19 @@
             "client": { password: "client123", role: "Client" }
         };
 
-        const themeToggle = document.getElementById('themeToggle');
-        const submitLogin = document.getElementById('submitLogin');
-        const usernameInput = document.getElementById('username');
-        const passwordInput = document.getElementById('password');
-        const rememberMe = document.getElementById('rememberMe');
-        const errorMessage = document.getElementById('errorMessage');
-        const welcomeMessage = document.getElementById('welcomeMessage');
-        const logoutButton = document.getElementById('logoutButton');
-        const loginSection = document.getElementById('loginSection');
-        const dashboard = document.getElementById('dashboard');
+        function toggleSettings() {
+            const menu = document.getElementById("settingsMenu");
+            menu.style.display = menu.style.display === "block" ? "none" : "block";
+        }
 
-        function saveLogin(username, role) {
-            localStorage.setItem("loggedInUser", JSON.stringify({ username, role }));
+        function toggleDarkMode() {
+            document.body.classList.toggle("dark-mode");
+            localStorage.setItem("darkMode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
+        }
+
+        function logout() {
+            localStorage.removeItem("loggedInUser");
+            location.reload();
         }
 
         function loadLogin() {
@@ -151,33 +154,25 @@
         }
 
         function showDashboard(role) {
-            loginSection.style.display = "none";
-            dashboard.style.display = "block";
-            logoutButton.style.display = "block";
-            welcomeMessage.textContent = `Welcome ${role}!`;
+            document.getElementById("loginSection").style.display = "none";
+            document.getElementById("dashboard").style.display = "block";
+            document.getElementById("welcomeMessage").textContent = `Welcome ${role}!`;
         }
 
-        submitLogin.addEventListener('click', function() {
-            let username = usernameInput.value.trim().toLowerCase();
-            let password = passwordInput.value.trim();
+        document.getElementById('submitLogin').addEventListener('click', function() {
+            let username = document.getElementById("username").value.trim().toLowerCase();
+            let password = document.getElementById("password").value.trim();
             
             if (users[username] && users[username].password === password) {
                 showDashboard(users[username].role);
 
-                if (rememberMe.checked) {
-                    saveLogin(username, users[username].role);
+                if (document.getElementById("rememberMe").checked) {
+                    localStorage.setItem("loggedInUser", JSON.stringify({ username, role: users[username].role }));
                 }
             } else {
-                errorMessage.style.display = "block";
+                document.getElementById("errorMessage").style.display = "block";
             }
         });
-
-        logoutButton.addEventListener('click', function() {
-            localStorage.removeItem("loggedInUser");
-            location.reload();
-        });
-
-        loadLogin();
 
         document.querySelectorAll('.likeBtn, .dislikeBtn').forEach(button => {
             button.addEventListener('click', function() {
@@ -195,6 +190,7 @@
             });
         });
 
+        loadLogin();
     </script>
 
 </body>
